--- a/card.html
+++ b/card.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="css/card.css">
 </head>
+
 <body>
     <section class="cards">
         <article class="card card--1">
@@ -17,7 +19,9 @@
                 <div class="card__img--hover"></div>
             </a>
             <div class="card__info">
-                <span class="card__category">americano dibuat dari satu atau dua shot espresso, kemudian ditambahkan air panas di atasnya. Sementara kopi hitam adalah minuman hasil seduhan bubuk kopi tanpa espresso.</span>
+                <span class="card__category">americano dibuat dari satu atau dua shot espresso, kemudian ditambahkan air
+                    panas di atasnya. Sementara kopi hitam adalah minuman hasil seduhan bubuk kopi tanpa
+                    espresso.</span>
                 <h3 class="card__title">Americano</h3>
             </div>
         </article>
@@ -28,10 +32,13 @@
                 <div class="card__img--hover"></div>
             </a>
             <div class="card__info">
-                <span class="card__category">diseduh dengan dripper vietnam dan disajikan bersama susu/krimer kental manis. Vietnam memiliki cara penyajian khas dalam membuat minuman yang sesuai dengan karakter biji di daerahnya.</span>
+                <span class="card__category">diseduh dengan dripper vietnam dan disajikan bersama susu/krimer kental
+                    manis. Vietnam memiliki cara penyajian khas dalam membuat minuman yang sesuai dengan karakter biji
+                    di daerahnya.</span>
                 <h3 class="card__title">vietnam_drip</h3>
             </div>
         </article>
     </section>
 </body>
+
 </html>
