--- a/contact.html
+++ b/contact.html
@@ -1,117 +1,169 @@
 <!doctype html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Seema. Coffee</title>
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
+    </script>
 
 
     <script src="https://kit.fontawesome.com/1935d064dd.js" crossorigin="anonymous"></script>
-    <link href="node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" >
+    <link href="node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/style.css">
 
-    <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css"/>
-  </head>
-  <body>
+    <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css" />
+</head>
+
+<body>
+    <!-- Navigasi -->
+    <nav class="navbar navbar-expand-lg bg-dark navbar-dark shadow-lg fixed-top">
+        <div class="container">
+            <a id="logo" href=""><img src="img/icons8-coffee-beans-50.png" style="width: 50px"></a>
+
+            <a class="navbar-brand" href="#">Seema.</a>
+
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse text-right" id="navbarSupportedContent">
+                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                    <li class="nav-link">
+                        <a class="nav-item" aria-current="page" href="/">Home</a>
+                    </li>
+                    <li class="nav-link">
+                        <a class="nav-item" active-color="black" href="about.html">AboutUs</a>
+                    </li>
+                    <li class="nav-link">
+                        <a class="nav-item" active-color="white" href="service.html">Service</a>
+                    </li>
+                    <li class="nav-link">
+                        <a class="nav-item" active-color="black" href="produk.html">Product</a>
+                    </li>
+                    <li class="nav-link">
+                        <a class="nav-item" active-color="white" href="team.html">Team</a>
+                    </li>
+                    <li class="nav-link">
+                        <a class="nav-item" active-color="black" href="contact.html">ContactUs</a>
+                    </li>
+                    <span class="nav-indicator"></span>
+                </ul>
+            </div>
+        </div>
+    </nav>
 
 
     <!-- ContactUs -->
     <section class="container-fluid bg-light contact pt-5 pb-5 mb-4">
 
-      <!--Section heading-->
-      <h2 class="h1-responsive font-weight-bold text-left my-4">Contact us</h2>
-      <!--Section description-->
-      <p class="text-left w-responsive mx-auto mb-5 mt-3">Punya pertanyaan seputar Seema. ? silahkan hubungi kami di Seema. Coffee</p>
+        <!--Section heading-->
+        <h2 class="h1-responsive font-weight-bold text-left my-4">Contact us</h2>
+        <!--Section description-->
+        <p class="text-left w-responsive mx-auto mb-5 mt-3">Punya pertanyaan seputar Seema. ? silahkan hubungi kami di
+            Seema. Coffee</p>
 
-      <div class="row">
+        <div class="row">
 
-          <!--Grid column-->
-          <div class="col-md-9 mb-md-0 mb-5 mt-1">
-              <form id="contact-form" name="contact-form" action="mail.php" method="POST">
+            <!--Grid column-->
+            <div class="col-md-9 mb-md-0 mb-5 mt-1">
+                <form id="contact-form" name="contact-form" action="mail.php" method="POST">
 
-                  <!--Grid row-->
-                  <div class="row">
+                    <!--Grid row-->
+                    <div class="row">
 
-                      <!--Grid column-->
-                      <div class="col-md-6">
-                        <div class="md-form mb-0">
-                          <label for="name">Nama</label>
-                          <input type="text" id="name" name="name" class="form-control mb-3">                          
+                        <!--Grid column-->
+                        <div class="col-md-6">
+                            <div class="md-form mb-0">
+                                <label for="name">Nama</label>
+                                <input type="text" id="name" name="name" class="form-control mb-3">
+                            </div>
                         </div>
-                       </div>
-                    <!--Grid column-->
+                        <!--Grid column-->
 
-                    <!--Grid column-->
-                    <div class="col-md-6">
-                        <div class="md-form mb-0">
-                            <label for="email">Email</label>
-                            <input type="text" id="email" name="email" class="form-control mb-3">
-                            
+                        <!--Grid column-->
+                        <div class="col-md-6">
+                            <div class="md-form mb-0">
+                                <label for="email">Email</label>
+                                <input type="text" id="email" name="email" class="form-control mb-3">
+
+                            </div>
+                        </div>
+                        <!--Grid column-->
+
+                    </div>
+
+                    <!--Grid row-->
+                    <div class="row">
+
+                        <!--Grid column-->
+                        <div class="col-md-12">
+
+                            <div class="md-form">
+                                <textarea type="text" id="message" name="message" rows="5"
+                                    class="form-control md-textarea"></textarea>
+                                <label for="message">Pesan Anda</label>
+                            </div>
+
                         </div>
                     </div>
-                    <!--Grid column-->
+                    <!--Grid row-->
 
-              </div>
+                </form>
 
-              <!--Grid row-->
-              <div class="row">
+                <div class="text-center text-md-left">
+                    <a class="btn btn-primary" onclick="document.getElementById('contact-form').submit();">Kirim</a>
+                </div>
+                <div class="status"></div>
+            </div>
+            <!--Grid column-->
 
-                  <!--Grid column-->
-                  <div class="col-md-12">
+            <!--Grid column-->
+            <div class="col-md-3 text-center">
+                <ul class="list-unstyled mb-0">
+                    <li><i class="fa fa-instagram" aria-hidden="true"></i>
+                        <p><a href="https://www.instagram.com/seemacoffee.id/" target="blank_"
+                                id="ig">seemacoffee.id</a></p>
+                    </li>
 
-                      <div class="md-form">
-                          <textarea type="text" id="message" name="message" rows="5" class="form-control md-textarea"></textarea>
-                          <label for="message">Pesan Anda</label>
-                      </div>
+                    <li><i class="fa fa-facebook-square" aria-hidden="true"></i>
+                        <p><a href="https://www.instagram.com/seemacoffee.id/" target="blank_"
+                                id="fb">seemacoffee.id</a></p>
+                    </li>
 
-                  </div>
-              </div>
-              <!--Grid row-->
+                    <li><i class="fa fa-coffee" aria-hidden="true"></i>
+                        <p><a href="https://www.google.com/maps/place/Seema+Coffee/@-7.7551266,110.3912259,19.79z/data=!4m5!3m4!1s0x2e7a59982bdecc4b:0xfe244540ebfb2595!8m2!3d-7.7551343!4d110.3910812"
+                                target="blank_" id="maps">Maps</a></p>
+                    </li>
+                </ul>
+            </div>
+            <!--Grid column-->
 
-              </form>
-
-          <div class="text-center text-md-left">
-              <a class="btn btn-primary" onclick="document.getElementById('contact-form').submit();">Kirim</a>
-          </div>
-          <div class="status"></div>
-      </div>
-      <!--Grid column-->
-
-      <!--Grid column-->
-      <div class="col-md-3 text-center" >
-          <ul class="list-unstyled mb-0">
-              <li><i class="fa fa-instagram" aria-hidden="true"></i>
-                  <p><a href="https://www.instagram.com/seemacoffee.id/" target="blank_" id="ig">seemacoffee.id</a></p>
-              </li>
-
-              <li><i class="fa fa-facebook-square" aria-hidden="true"></i>
-                <p><a href="https://www.instagram.com/seemacoffee.id/" target="blank_" id="fb">seemacoffee.id</a></p>
-              </li>
-
-              <li><i class="fa fa-coffee" aria-hidden="true"></i>
-                <p><a href="https://www.google.com/maps/place/Seema+Coffee/@-7.7551266,110.3912259,19.79z/data=!4m5!3m4!1s0x2e7a59982bdecc4b:0xfe244540ebfb2595!8m2!3d-7.7551343!4d110.3910812" target="blank_" id="maps">Maps</a></p>
-              </li>
-          </ul>
-      </div>
-      <!--Grid column-->
-
-    </div>
+        </div>
 
     </section>
 
-      
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 
-  
-    <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.js" ></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+        integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous">
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+        integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous">
+    </script>
+
+
+    <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
     <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
-    <script src="js/topButton.js">  
-    </script> 
-  </body>
+    <script src="js/topButton.js">
+    </script>
+</body>
+
 </html>
