--- a/produk.html
+++ b/produk.html
@@ -1,124 +1,155 @@
 <!doctype html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Seema. Coffee</title>
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
+    </script>
 
 
     <script src="https://kit.fontawesome.com/1935d064dd.js" crossorigin="anonymous"></script>
-    <link href="node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" >
+    <link href="node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/style.css">
 
-    <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css"/>
-  </head>
-  <body>
+    <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css" />
+</head>
+
+<body>
+    <!-- Navigasi -->
+    <nav class="navbar navbar-expand-lg bg-dark navbar-dark shadow-lg fixed-top">
+        <div class="container">
+            <a id="logo" href=""><img src="img/icons8-coffee-beans-50.png" style="width: 50px"></a>
+
+            <a class="navbar-brand" href="#">Seema.</a>
+
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse text-right" id="navbarSupportedContent">
+                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                    <li class="nav-link">
+                        <a class="nav-item" aria-current="page" href="/">Home</a>
+                    </li>
+                    <li class="nav-link">
+                        <a class="nav-item" active-color="black" href="about.html">AboutUs</a>
+                    </li>
+                    <li class="nav-link">
+                        <a class="nav-item" active-color="white" href="service.html">Service</a>
+                    </li>
+                    <li class="nav-link">
+                        <a class="nav-item" active-color="black" href="produk.html">Product</a>
+                    </li>
+                    <li class="nav-link">
+                        <a class="nav-item" active-color="white" href="team.html">Team</a>
+                    </li>
+                    <li class="nav-link">
+                        <a class="nav-item" active-color="black" href="contact.html">ContactUs</a>
+                    </li>
+                    <span class="nav-indicator"></span>
+                </ul>
+            </div>
+        </div>
+    </nav>
 
 
 
     <!-- Produk -->
     <div class="container-fluid pt-5 pb-5 bg-light">
-      <div class="container text-center">
-        <h2 class="display-3" id="produk">Produk Kami</h2>
-        <p>OUR GALLERY PRODUCT</p>
-        <div class="row pt-4 gx-4 gy-4">
-          <div class="col-md-4">
-            <div class="card crop-img">
-              <img src="Img/americano.jpg" 
-              class="card-img-top"
-              width="230"
-              height="230"
-              />
-              <div class="card-body">
-                <h5 class="card-title">Americano</h5>
-                <p class="card-text">americano dibuat dari satu atau dua shot espresso, kemudian ditambahkan air panas di atasnya. Sementara kopi hitam adalah minuman hasil seduhan bubuk kopi tanpa espresso.</p>
-              </div>
-          </div>
+        <div class="container text-center">
+            <h2 class="display-3 mt-lg-5" id="produk">Produk Kami</h2>
+            <p>OUR GALLERY PRODUCT</p>
+            <div class="row pt-4 gx-4 gy-4">
+                <div class="col-md-4">
+                    <div class="card crop-img">
+                        <img src="Img/americano.jpg" class="card-img-top" width="230" height="230" />
+                        <div class="card-body">
+                            <h5 class="card-title">Americano</h5>
+                            <p class="card-text">americano dibuat dari satu atau dua shot espresso, kemudian ditambahkan
+                                air panas di atasnya. Sementara kopi hitam adalah minuman hasil seduhan bubuk kopi tanpa
+                                espresso.</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-4">
+                    <div class="card crop-img">
+                        <img src="Img/vietnam_drip.jpg" class="card-img-top" width="230" height="230" />
+
+                        <div class="card-body">
+                            <h5 class="card-title">Vietnam Drip</h5>
+                            <p class="card-text">diseduh dengan dripper vietnam dan disajikan bersama susu/krimer kental
+                                manis. Vietnam memiliki cara penyajian khas dalam membuat minuman yang sesuai dengan
+                                karakter biji di daerahnya.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+
+                    <div class="card crop-img">
+                        <img src="Img/expresso.jpg" class="card-img-top" width="230" height="230" />
+                        <div class="card-body">
+                            <h5 class="card-title">Expresso</h5>
+                            <p class="card-text">kopi yang diseduh dengan menyemburkan air panas bertekanan tinggi ke
+                                bubuk kopi. Namanya berasal dari bahasa Italia yang berarti express atau cepat.
+                                Disajikan hanya dengan secangkir kecil</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-4">
+
+                    <div class="card crop-img">
+                        <img src="Img/caramel.jpg" class="card-img-top" width="230" height="230" />
+                        <div class="card-body">
+                            <h5 class="card-title">Caramel Machiato</h5>
+                            <p class="card-text">2 jenis macchiato, latte macchiato dan caffé macchiato. Komposisi dari
+                                latte macchiato adalah susu yang di-steam, espresso, dan foam dengan rasio 2:1:1. Caffé
+                                atau kopi macchiato</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-4">
+
+                    <div class="card crop-img">
+                        <img src="Img/kopsus.jpg" class="card-img-top" width="230" height="230" />
+                        <div class="card-body">
+                            <h5 class="card-title">Coffee Milk</h5>
+                            <p class="card-text">Caffé Milk atau kopi susu adalah campuran 1/3 espresso dengan 2/3
+                                steamed milk. Buih susu hanya tipis di permukaan. Jika Anda memesan ini di cafe, minuman
+                                ini kami akan sajikan dengan gambar di permukaannya.</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-4">
+
+                    <div class="card">
+                        <img src="Img/lattee.jpg" class="card-img-top" width="230" height="230" />
+                        <div class="card-body">
+                            <h5 class="card-title">Latte Coffee</h5>
+                            <p class="card-text">Caffé latte atau kopi latte adalah campuran 1/3 espresso dengan 2/3
+                                steamed milk. Buih susu hanya tipis di permukaan Meski mirip dengan cappuccino, foam
+                                pada minuman ini lebih milky dan creamy</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-
-        <div class="col-md-4">
-          <div class="card crop-img">
-            <img src="Img/vietnam_drip.jpg" 
-            class="card-img-top"
-            width="230"
-            height="230"
-            />
-            
-            <div class="card-body">             
-              <h5 class="card-title">Vietnam Drip</h5>
-              <p class="card-text">diseduh dengan dripper vietnam dan disajikan bersama susu/krimer kental manis. Vietnam memiliki cara penyajian khas dalam membuat minuman yang sesuai dengan karakter biji di daerahnya.</p>
-            </div>
-          </div>
-        </div>
-          <div class="col-md-4">
-
-            <div class="card crop-img">
-              <img src="Img/expresso.jpg" 
-              class="card-img-top"
-              width="230"
-              height="230"
-              />
-              <div class="card-body">
-                <h5 class="card-title">Expresso</h5>
-                <p class="card-text">kopi yang diseduh dengan menyemburkan air panas bertekanan tinggi ke bubuk kopi. Namanya berasal dari bahasa Italia yang berarti express atau cepat. Disajikan hanya dengan secangkir kecil</p>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-md-4">
-
-            <div class="card crop-img">
-              <img src="Img/caramel.jpg" 
-              class="card-img-top"
-              width="230"
-              height="230"
-              />
-              <div class="card-body">
-                <h5 class="card-title">Caramel Machiato</h5>
-                <p class="card-text">2 jenis macchiato, latte macchiato dan caffé macchiato. Komposisi dari latte macchiato adalah susu yang di-steam, espresso, dan foam dengan rasio 2:1:1. Caffé atau kopi macchiato</p>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-md-4">
-
-            <div class="card crop-img">
-              <img src="Img/kopsus.jpg" 
-              class="card-img-top"
-              width="230"
-              height="230"
-              />
-              <div class="card-body">
-                <h5 class="card-title">Coffee Milk</h5>
-                <p class="card-text">Caffé Milk atau kopi susu adalah campuran 1/3 espresso dengan 2/3 steamed milk. Buih susu hanya tipis di permukaan. Jika Anda memesan ini di cafe, minuman ini kami akan sajikan dengan gambar di permukaannya.</p>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-md-4">
-
-            <div class="card">
-              <img src="Img/lattee.jpg" 
-              class="card-img-top"
-              width="230"
-              height="230"
-              />
-              <div class="card-body">
-                <h5 class="card-title">Latte Coffee</h5>
-                <p class="card-text">Caffé latte atau kopi latte adalah campuran 1/3 espresso dengan 2/3 steamed milk. Buih susu hanya tipis di permukaan Meski mirip dengan cappuccino, foam pada minuman ini lebih milky dan creamy</p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
     </div>
 
-      
-    <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.js" ></script>
-  </body>
+
+    <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
+</body>
+
 </html>
