--- a/team.html
+++ b/team.html
@@ -1,66 +1,119 @@
 <!doctype html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Seema. Coffee</title>
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
+    </script>
 
 
     <script src="https://kit.fontawesome.com/1935d064dd.js" crossorigin="anonymous"></script>
-    <link href="node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" >
+    <link href="node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/style.css">
 
-    <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css"/>
-  </head>
-  <body>
+    <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css" />
+</head>
+
+<body>
+    <!-- Navigasi -->
+    <nav class="navbar navbar-expand-lg bg-dark navbar-dark shadow-lg fixed-top">
+        <div class="container">
+            <a id="logo" href=""><img src="img/icons8-coffee-beans-50.png" style="width: 50px"></a>
+
+            <a class="navbar-brand" href="#">Seema.</a>
+
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse text-right" id="navbarSupportedContent">
+                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                    <li class="nav-link">
+                        <a class="nav-item" aria-current="page" href="/">Home</a>
+                    </li>
+                    <li class="nav-link">
+                        <a class="nav-item" active-color="black" href="about.html">AboutUs</a>
+                    </li>
+                    <li class="nav-link">
+                        <a class="nav-item" active-color="white" href="service.html">Service</a>
+                    </li>
+                    <li class="nav-link">
+                        <a class="nav-item" active-color="black" href="produk.html">Product</a>
+                    </li>
+                    <li class="nav-link">
+                        <a class="nav-item" active-color="white" href="team.html">Team</a>
+                    </li>
+                    <li class="nav-link">
+                        <a class="nav-item" active-color="black" href="contact.html">ContactUs</a>
+                    </li>
+                    <span class="nav-indicator"></span>
+                </ul>
+            </div>
+        </div>
+    </nav>
 
 
     <!-- Our Team -->
     <div class="container-fluid team pt-5 pb-5">
         <div class="container text-center">
-            <h2 class="display-3" id="team">TEAM</h2>
+            <h2 class="display-3 mt-lg-5" id="team">TEAM</h2>
             <p>TIM KAMI YANG TERDIRI DARI 5 JAGOAN</p>
             <div class="row pt-4">
                 <div class="col-md-4">
                     <span class="bulet"><img src="img/edo.png" class="bulet"></span>
                     <h2 class="mt-3">Redo luthfi</h2>
                     <p>20.11.3780</p>
+                    <p style="font-family:  Geneva, Verdana, sans-serif; color:#4b3621; font-weight: 600;">Back-end Dev
+                    </p>
                 </div>
 
                 <div class="col-md-4">
                     <span class="bulet"><img src="img/ihann.jpg" class="bulet"></span>
                     <h2 class="mt-3">Ilhan Firhansyah</h2>
                     <p>20.11.3775</p>
-                  </div>
+                    <p style="font-family:  Geneva, Verdana, sans-serif; color:#4b3621; font-weight: 600;">Fullstack Dev
+                    </p>
+                </div>
 
                 <div class="col-md-4">
                     <span class="bulet"><img src="img/yoga.jpg" class="bulet"></span>
                     <h2 class="mt-3">Yoga Irwanda</h2>
                     <p>20.11.3792</p>
+                    <p style="font-family:  Geneva, Verdana, sans-serif; color:#4b3621; font-weight: 600;">UI UX Designer
+                    </p>
                 </div>
-  
+
                 <div class="col-md-6">
                     <span class="bulet"><img src="img/gatot.jpeg.png" class="bulet"></span>
                     <h2 class="mt-3">Muhamad Gatot Supiadin</h2>
                     <p>20.11.3771</p>
+                    <p style="font-family:  Geneva, Verdana, sans-serif; color:#4b3621; font-weight: 600;">Front-End Dev
+                    </p>
                 </div>
-  
+
                 <div class="col-md-6">
                     <span class="bulet"><img src="img/galer.png" class="bulet"></span>
                     <h2 class="mt-3">Muhammad Zhafran Ghaly</h2>
                     <p>20.11.3774</p>
+                    <p style="font-family:  Geneva, Verdana, sans-serif; color:#4b3621; font-weight: 600;">Back-end Dev
+                    </p>
                 </div>
 
             </div>
         </div>
     </div>
 
-      
-    <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.js" ></script>
-  </body>
+
+    <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
+</body>
+
 </html>
