add netlify form

--- a/contact.html
+++ b/contact.html
@@ -75,8 +75,7 @@
 
             <!--Grid column-->
             <div class="col-md-9 mb-md-0 mb-5 mt-1">
-                <form id="contact-form" name="contact-form" action="mail.php" method="POST">
-
+                <form name="contact" netlify>
                     <!--Grid row-->
                     <div class="row">
 
@@ -112,16 +111,16 @@
                                     class="form-control md-textarea"></textarea>
                                 <label for="message">Pesan Anda</label>
                             </div>
-
                         </div>
                     </div>
                     <!--Grid row-->
 
-                </form>
 
-                <div class="text-center text-md-left">
-                    <a class="btn btn-primary" onclick="document.getElementById('contact-form').submit();">Kirim</a>
-                </div>
+
+                    <div class="text-center text-md-left">
+                        <button type="submit" class="btn btn-primary">Kirim</button>
+                    </div>
+                </form>
                 <div class="status"></div>
             </div>
             <!--Grid column-->
@@ -131,12 +130,14 @@
                 <ul class="list-unstyled mb-0">
                     <li><i class="fa fa-instagram" aria-hidden="true"></i>
                         <p><a href="https://www.instagram.com/seemacoffee.id/" target="blank_"
-                                id="ig">seemacoffee.id</a></p>
+                                id="ig">seemacoffee.id</a>
+                        </p>
                     </li>
 
                     <li><i class="fa fa-facebook-square" aria-hidden="true"></i>
                         <p><a href="https://www.instagram.com/seemacoffee.id/" target="blank_"
-                                id="fb">seemacoffee.id</a></p>
+                                id="fb">seemacoffee.id</a>
+                        </p>
                     </li>
 
                     <li><i class="fa fa-coffee" aria-hidden="true"></i>
