--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
                     <span class="bulet"><img src="img/galer.png" class="bulet"></span>
                     <h2 class="mt-3">Muhammad Zhafran Ghaly</h2>
                     <p>20.11.3774</p>
-                    <p style="font-family:  Geneva, Verdana, sans-serif; color:#4b3621; font-weight: 600;">Fron-End Dev
+                    <p style="font-family:  Geneva, Verdana, sans-serif; color:#4b3621; font-weight: 600;">Back-End Dev
                     </p>
                 </div>
 
